--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "docx": "^8.5.0",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mammoth": "^1.8.0",
     "multer": "^1.4.5-lts.1",
