--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,16 +15,19 @@
     "ajv-keywords": "^3.5.2",
     "axios": "^1.7.2",
     "framer-motion": "^11.2.11",
+    "mammoth": "^1.8.0",
     "react": "^18.3.1",
+    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.11",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
