--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,13 @@
     "docx": "^8.5.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "html-docx-js": "^0.3.1",
     "mammoth": "^1.8.0",
+    "mongoose": "^8.4.5",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "unzipper": "^0.12.1"
   }
