--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.2.11",
     "mammoth": "^1.8.0",
+    "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.11",
     "util": "^0.12.5",
